; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_bmp.c_bmp_read_info.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_bmp.c_bmp_read_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@.str = private unnamed_addr constant [24 x i8] c"Reading Windows Header\0A\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"Unhandled bitmap\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_6__*)* @bmp_read_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bmp_read_info(i32* %0, %struct.TYPE_6__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %5, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @gdGetIntLSB(i32* %7, i32* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %43

12:                                               ; preds = %2
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  switch i32 %15, label %39 [
    i32 130, label %16
    i32 129, label %16
    i32 128, label %16
    i32 132, label %25
    i32 131, label %32
  ]

16:                                               ; preds = %12, %12, %12
  %17 = call i32 @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %18 = call i32 @BMP_DEBUG(i32 %17)
  %19 = load i32*, i32** %4, align 8
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %21 = call i32 @bmp_read_windows_v3_info(i32* %19, %struct.TYPE_6__* %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %16
  store i32 1, i32* %3, align 4
  br label %43

24:                                               ; preds = %16
  br label %42

25:                                               ; preds = %12
  %26 = load i32*, i32** %4, align 8
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %28 = call i32 @bmp_read_os2_v1_info(i32* %26, %struct.TYPE_6__* %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %25
  store i32 1, i32* %3, align 4
  br label %43

31:                                               ; preds = %25
  br label %42

32:                                               ; preds = %12
  %33 = load i32*, i32** %4, align 8
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %35 = call i32 @bmp_read_os2_v2_info(i32* %33, %struct.TYPE_6__* %34)
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %38

37:                                               ; preds = %32
  store i32 1, i32* %3, align 4
  br label %43

38:                                               ; preds = %32
  br label %42

39:                                               ; preds = %12
  %40 = call i32 @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  %41 = call i32 @BMP_DEBUG(i32 %40)
  store i32 1, i32* %3, align 4
  br label %43

42:                                               ; preds = %38, %31, %24
  store i32 0, i32* %3, align 4
  br label %43

43:                                               ; preds = %42, %39, %37, %30, %23, %11
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local i32 @gdGetIntLSB(i32*, i32*) #1

declare dso_local i32 @BMP_DEBUG(i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @bmp_read_windows_v3_info(i32*, %struct.TYPE_6__*) #1

declare dso_local i32 @bmp_read_os2_v1_info(i32*, %struct.TYPE_6__*) #1

declare dso_local i32 @bmp_read_os2_v2_info(i32*, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
